--- a/index.html
+++ b/index.html
@@ -259,23 +259,23 @@
         >
           <div class="flex h-full justify-center items-center gap-12">
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit1.png" alt="" />
+              <img src="./images/fruit1.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Grapes</p>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit2.png" alt="" />
+              <img src="./images/fruit2.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Orange</p>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit3.png" alt="" />
+              <img src="./images/fruit3.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Mango</p>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit4.png" alt="" />
+              <img src="./images/fruit4.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Strawberry</p>
             </div>
             <div class="flex flex-col justify-center items-center">
-              <img src="images/fruit5.png" alt="" />
+              <img src="./images/fruit5.png" alt="" />
               <p class="text-fruit-another font-medium text-xl">Pomegranate</p>
             </div>
           </div>
@@ -350,7 +350,7 @@
       >
         <div class="card w-[340px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+            <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
@@ -391,7 +391,7 @@
         </div>
         <div class="card w-[340px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+            <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
@@ -432,7 +432,7 @@
         </div>
         <div class="card w-[340px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+            <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
@@ -473,7 +473,7 @@
         </div>
         <div class="card w-[340px] bg-base-100 shadow-xl border">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+            <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4">
             <h2 class="card-title">$12.90 - $18.85</h2>
@@ -525,7 +525,7 @@
     <section class="container mx-auto px-4 lg:px-14 mt-14">
       <div
         class="relative hero rounded-lg"
-        style="background-image: url(images/banner1.png)"
+        style="background-image: url(./images/banner1.png)"
       >
         <div
           class="absolute bg-black w-full h-full opacity-60 rounded-lg"
